<resources>
    <string name="app_name">UniCT Sharing</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="click_to_register">Click to register</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="logout">Logout</string>
    <string name="email_universitaria">Email Universitaria</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="numero_cellulare">Numero cellulare</string>
    <string name="sei_in_possesso_di_un_veicolo">Sei in possesso di un veicolo?   </string>
    <string name="inserisci_foto">Inserisci foto</string>
    <string name="aggiungi_foto">Aggiungi foto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Mappa">mappa</string>
    <string name="TastoBack">TastoBack</string>

    <string-array name="Partenze">
        <item>Cittadella universitaria</item>
        <item>Monastero Benedettini</item>
        <item>Torre biologica</item>
        <item>Palazzo delle Scienze</item>
        <item>Piazza università</item>
        <item>Piazza Duomo</item>
        <item>Villa Bellini</item>
        <item>Piazza Stesicoro</item>
        <item>Piazza Borgo</item>
        <item>Corso Italia</item>
    </string-array>

    <string-array name="Destinazioni">
        <item>Cittadella universitaria</item>
        <item>Monastero Benedettini</item>
        <item>Torre biologica</item>
        <item>Palazzo delle Scienze</item>
        <item>Piazza università</item>
    </string-array>

    <string-array name="Ore">
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>

    <string-array name="Minuti">
        <item>00</item>
        <item>05</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
    </string-array>

    <string-array name="Posti">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>